--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="guide">
-    <img src="./eisenhower-matrix.jpg">
+    <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
     <a class="details" 
       href="https://goal-life.com/page/method/matrix-eisenhower"
     > Want more details?
@@ -31,7 +31,7 @@
         <input type="text" class="task input-text">
         <button class="button edit">Edit</button>
         <button class="button delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="remove">
         </button>
       </li>
       <li class="edit-mode">
@@ -40,7 +40,7 @@
         <input type="text" value="Go Shopping" class="task input-text">
         <button class="button edit">Save</button>
         <button class="button delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="remove">
         </button>
       </li>
     </ul>
@@ -52,7 +52,7 @@
         <input type="text" class="task input-text">
         <button class="button edit">Edit</button>
         <button class="button delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="remove">
         </button>
       </li>
     </ul>
